--- a/README
+++ b/README
@@ -1,10 +1,19 @@
-////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-		Hello! This is readme-file to use project.
+											Hello! This is readme-file to use project.
 
-////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
- - Deploy WAR-file to web application store on your server.
- - Run it.
- 
-////////////////////////////////////////////////////////////////
+	This project can been built with maven & jetty only. All you have to do is:
+		- Download maven here -> http://maven.apache.org/download.html
+		- Configure maven using this -> http://www.apache-maven.ru/install.html
+	
+	After maven is configurated you can build project using command prompt:
+		- go to my-project-web folder
+			cd {your download dir}/Google_Tours_Web/my-project/my-project-web
+		- build project
+			mvn clean install
+		- run project 
+			mvn jetty:run
+		- open localhost:8080/demo/main in your browser
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
