--- a/README
+++ b/README
@@ -38,8 +38,8 @@
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	Install SDK:
-		mvn install:install-file -DgroupId=com.yota.top.sdk -DartifactId
-		=top-sdk -Dversion=0.1-SNAPSHOT -Dfile=C:/Users/DSavin/Desktop/top-sdk-0.1-SNAPSHOT.jar 
+		mvn install:install-file -DgroupId=com.yota.top.sdk -DartifactId=top-sdk 
+		-Dversion=0.1-SNAPSHOT -Dfile=C:/Users/DSavin/Desktop/top-sdk-0.1-SNAPSHOT.jar 
 		-Dpackaging=jar -DgeneratePom=true
 		
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////		
