--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-					Hello! This is readme-file to use project.some changes
+					Hello! This is readme-file to use project.
 
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
