--- a/README
+++ b/README
@@ -36,3 +36,5 @@
 	Sequence_diagram folder contains picture and sourse-file of prject object's interactions arranged in time sequence
 
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////	
+
+SOME CHANGES
