replace from test repo

--- a/README
+++ b/README
@@ -35,6 +35,15 @@
 
 	Sequence_diagram folder contains picture and sourse-file of prject object's interactions arranged in time sequence
 
-/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////	
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-SOME CHANGES
+	Install SDK:
+		mvn install:install-file -DgroupId=com.yota.top.sdk -DartifactId=top-sdk 
+		-Dversion=0.1-SNAPSHOT -Dfile=C:/Users/DSavin/Desktop/top-sdk-0.1-SNAPSHOT.jar 
+		-Dpackaging=jar -DgeneratePom=true
+		
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////		
+
+	SOME DIF
+	
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////	
